IF (SQLITE3_FOUND)
  ADD_SUBDIRECTORY(sqlite)
ELSE(SQLITE3_FOUND)
  MESSAGE(STATUS "Skipping building of SQLite3 backend")
ENDIF(SQLITE3_FOUND)

IF (MYSQL_FOUND)
  ADD_SUBDIRECTORY(mysql)
ELSE(MYSQL_FOUND)
  MESSAGE(STATUS "Skipping building of MySQL backend")
ENDIF(MYSQL_FOUND)

IF (ODBC_FOUND)
  ADD_SUBDIRECTORY(mssql)
ELSE(ODBC_FOUND)
  MESSAGE(STATUS "Skipping building of ODBC backend")
ENDIF(ODBC_FOUND)
