IF (SQLITE3_FOUND)
  ADD_SUBDIRECTORY(sqlite)
ELSE(SQLITE3_FOUND)
  MESSAGE(STATUS "Skip building SQLite3 backend")
ENDIF(SQLITE3_FOUND)

IF (MYSQL_FOUND)
  ADD_SUBDIRECTORY(mysql)
ELSE(MYSQL_FOUND)
  MESSAGE(STATUS "Skip building MySQL backend")
ENDIF(MYSQL_FOUND)

IF (ODBC_FOUND)
  ADD_SUBDIRECTORY(mssql)
ELSE(ODBC_FOUND)
  MESSAGE(STATUS "Skip building ODBC backend")
ENDIF(ODBC_FOUND)

IF (PostgreSQL_FOUND)
  ADD_SUBDIRECTORY(postgresql)
ELSE(PostgreSQL_FOUND)
  MESSAGE(STATUS "Skip building PostgreSQL backend")
ENDIF(PostgreSQL_FOUND)
